--- a/Style.css
+++ b/Style.css
@@ -1,35 +1,48 @@
-*{margin: 0%;
-padding: 0%;}
-
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,700;1,300;1,400;1,700&family=Roboto+Condensed:ital,wght@1,700&display=swap');
-
-.navbar { width: 90%;
-margin: auto;
-padding: 35px;
-display: flex;
-align-items: center; 
-justify-content: space-between;
-background-color: black;
-color: white;
-font-family: 'Lato', sans-serif;
-
-font-family: 'Roboto Condensed', sans-serif;
-font-size: large;
-
-}
-
-.Logo {
-    width: 70px;
-    cursor: pointer;
-}
-
-.navbar ul li {
-    list-style: none;
-    display: inline-block;
-    margin: 0 20 px;
-
-}
-.navbar ul li a {
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     text-decoration: none;
-    color: white;
+    list-style-type: none;
 }
+
+header {
+    background-color: black;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+    height: 80px;
+    padding: 20px 150px 5px 20px;
+    position: absolute;
+    top: 0;
+    
+}
+
+.logo {
+    height: 70%;
+}
+
+.navbar,
+.navbar-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+}
+
+.navbar {
+    gap: 150px;
+}
+
+.navbar-list {
+    gap: 30px;
+    text-decoration-color: none;
+    color: azure;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 600;
+
+}
+    
+   
