--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
     list-style-type: none;
+    background: black;
 }
 
 header {
@@ -15,9 +16,9 @@ header {
     align-items: baseline;
     height: 80px;
     padding: 20px 150px 5px 20px;
-    position: absolute;
+    position: relative;
     top: 0;
-    
+
 }
 
 .logo {
@@ -29,20 +30,122 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-  
-}
-
-.navbar {
-    gap: 150px;
-}
-
-.navbar-list {
+    text-decoration-color: none;
     gap: 30px;
+    font-size: 20px;
+
+}
+
+
+
+.navbar-list a {
+
     text-decoration-color: none;
     color: azure;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 600;
 
+
 }
+
+#hero-main {
+
+    margin-top: 50px;
+    padding: 20px;
+    background: black;
+    color: azure;
+    max-width: 2000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.titulo-empresa {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    width: 75%;
+    align-items: center;
+
+}
+
+.titulo-empresa h1 {
+    font-size: 60px;
+    width: 80%;
+    font-weight: 900;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.titulo-empresa p {
+    font-size: 32px;
+    width: 80%;
+    font-weight: 400;
+    align-items: center;
+    justify-content: center;
+}
+
+.imagen {
+    border-radius: 20px;
+    padding: 15px;
+    background: gray;
+    size: 100px;
+    max-width: 75%;
+
+
+}
+
+.descripcion {
+    margin-right: 250px;
+    margin-left: 250px;
+    margin-top: 15px;
+    background: black;
+    color: azure;
+    max-width: 2000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.botones {
+
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    gap: 1px;
+    border: none;
+
+
+}
+
+.botones a {
     
-   
+    background-image: linear-gradient(to right, #232526 0%, #414345 51%, #232526 100%);
+    margin: 10px;
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
+
+
+
+    background-position: right center;
+    color: #fff;
+    text-decoration: none;
+}
+
+
+
+}
