--- a/Style.css
+++ b/Style.css
@@ -44,6 +44,9 @@ header {
     color: azure;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 600;
+    background: linear-gradient(rgb(245, 245, 225), rgb(70, 59, 59));
+    -webkit-background-clip: text;
+    color: transparent;
 
 
 }
@@ -77,6 +80,9 @@ header {
     align-items: center;
     justify-content: center;
     position: relative;
+    background: linear-gradient(rgb(245, 245, 225), rgb(70, 59, 59));
+    -webkit-background-clip: text;
+    color: transparent;
 }
 
 .titulo-empresa p {
@@ -85,6 +91,9 @@ header {
     font-weight: 400;
     align-items: center;
     justify-content: center;
+    background: linear-gradient(rgb(245, 245, 225), rgb(70, 59, 59));
+    -webkit-background-clip: text;
+    color: transparent;
 }
 
 .imagen {
@@ -109,6 +118,7 @@ header {
     align-items: center;
     font-size: 18px;
     font-weight: 400;
+   
 }
 
 .botones {
@@ -126,7 +136,7 @@ header {
 }
 
 .botones a {
-    
+
     background-image: linear-gradient(to right, #232526 0%, #414345 51%, #232526 100%);
     margin: 10px;
     padding: 15px 45px;
@@ -148,4 +158,3 @@ header {
 
 
 
-}
