--- a/Style.css
+++ b/Style.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style-type: none;
-    background: rgb(43, 40, 40)
+    background: black
+
 }
 
 header {
@@ -16,7 +17,8 @@ header {
     align-items: baseline;
     height: 80px;
     padding: 20px 150px 5px 20px;
-    position: sticky;
+    background: rgb(12, 12, 12);
+
     top: 0;
 
 
@@ -34,7 +36,7 @@ header {
     text-decoration-color: none;
     gap: 30px;
     font-size: 20px;
-    position: sticky;
+    background: black;
 
 }
 
@@ -53,6 +55,8 @@ header {
 
 }
 
+
+
 #hero-main {
 
     margin-top: 50px;
@@ -64,6 +68,7 @@ header {
     align-items: center;
     position: relative;
     gap: 30px;
+
 }
 
 .titulo-empresa {
@@ -203,6 +208,7 @@ header {
     padding: 0px 200px;
     color: azure;
     width: 100%;
+    
 
 
     display: flex;
@@ -256,56 +262,93 @@ header {
     color: azure;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     position: relative;
-    gap: 30px;
+    gap: 300px;
 }
 
 
 
-.contacto h1 {
-    font-size: 32px;
+.contacto H1 {
+    font-size: 50px;
     width: 80%;
-    font-weight: 400;
-    align-items: center;
-    justify-content: center;
-   
+    font-weight: 800;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    gap: 20px;
+    padding: 100px;
+    display: block
+  
+
 
 }
 
 .contacto {
+    display: block;
 
-    display: flex;
-    flex-direction: column;
-  
-    width: 100%;
-    align-items: center;
 }
-   
+
+
+
+
 
 
 .contacto li {
     font-size: 22px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-padding: 50px;
+    display: block;
+    text-align: start;
+    font-weight: 100;
+}
 
 
+.contacto a {
+    text-decoration: none;
+    color: azure;
+}
+
+.imgcont {
+    display: flex;
+    justify-content: space-between;
 
 }
 
 .nosotros {
     border-radius: 20px;
-    padding: 15px 15px;
+    padding: 15px;
     background: gray;
     size: 100px;
     max-width: 75%;
-    margin-right: 100px;
+
 
 }
+
 .nosotros img {
-    
-    width: 800px;
-    height: 495px;
-   
+    width: 400px;
+    height: 400px;
+    justify-content: center;
 }
+
+.redes {
+    display: flex;
+}
+
+.nuestrasredes {
+    display: flex;
+justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    font-size: 20px;
+    gap: 15px;
+    background: black;
+    color: azure;
+}
+
+
+.redes a {
+    text-decoration: none;
+    color: azure;
+    background: black;
+}
+
